--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^2.1.3",
+    "steam-market-pricing": "^2.0.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
